# Hieroglyph-demo-EACL2026

./: README.md  pyproject.toml
hieroglyph_demo/: hieroglyph_detection.py  hieroglyph_translation.py  main.py  utils.py
